# security-baseline-auditor

./: .gitignore  LICENSE  README.md  pyproject.toml
auditor/: __init__.py  cli.py  models.py
auditor/checks/: file_permissions.py  secrets.py
auditor/checks/linux/: __init__.py  hardening.py
auditor/checks/macos/: __init__.py  hardening.py
auditor/checks/windows/: __init__.py  hardening.py
auditor/collectors/: host_info.py  network.py
auditor/reporters/: console.py  html_reporter.py  json_reporter.py  markdown_reporter.py
auditor/rules/: __init__.py  engine.py
auditor/utils/: platform.py
samples/: sbaudit-report-2026-03-10T23-09-51.json  sbaudit-report-2026-03-10T23-10-24.html  sbaudit-report-2026-03-10T23-10-43.md
tests/: test_cli.py  test_engine.py  test_models.py  test_reporters.py  test_secrets.py
